2004-06-23 Umadevi S <sumadevi@novell.com>
	* DataTableTest.cs :Corrected Testcases to .net 1.1 specifications

2004-06-23 Umadevi S  <sumadevi@novell.com>
	* DataRelationTest.cs : Corrected AddRelation testcases

2004-06-23 Umadevi S <sumadevi@novell.com>
	* ConstraintCollectionTest.cs : Corrected AddRange testcases

2004-06-20  Atsushi Enomoto <atsushi@ximian.com>

	* DataTableCollectionTest.cs : Added test for DataSet and Namespace
	  adjustment.

2004-06-18  Atsushi Enomoto <atsushi@ximian.com>

	* TypedDataSetGeneratorTest.cs : [TestFixture] was missing.

2004-06-15  Atsushi Enomoto <atsushi@ximian.com>

	* DataSetTest.cs : Added regression for #53959.

2004-05-31  Atsushi Enomoto <atsushi@ximian.com>

	* DataTableTest.cs : Added test for serialization by Boris Kirzner.
	* DataSetInferXmlSchemaTest.cs : Added test for schema element skip
	   by Boris Kirzner.

2004-05-27  Nick Drochak <ndrochak@ieee.org>

	* DataRelationCollectionTest.cs: Fixed build when using csc.

2004-05-27 Umadevi S <sumadevi@novell.com>
	* Corrected small typos in DataTableCollectionTest & DataRelationCollectionTest

2004-05-26  Umadevi S <sumadevi@novell.com>
	* Added files DataTableCollectionTest and DataRelationCollectionTest

2004-05-19  Atsushi Enomoto <atsushi@ximian.com>

	* DataSetTest.cs : Fixed ReadWriteXmlSchema() that miscounted
	  constraints and parent keys.

2004-05-18  Atsushi Enomoto <atsushi@ximian.com>

	* DataSetTest.cs : Converted CRLF to LF for line ending comparison.
	  (and added copyright line.)

2004-05-17  Atsushi Enomoto <atsushi@ximian.com>

	* DataSetTest.cs : Added WriteXmlEncodedXml() test.

2004-05-17  Atsushi Enomoto <atsushi@ximian.com>

	* DataSetAssertion.cs : Enabled "Ordinal" check again, unless the test
	  value is -1.
	* DataSetInferXmlSchemaTest.cs,
	  DataSetReadXmlSchemaTest.cs  : Enabled Ordinal check again, as long
	  as working. Added IgnoredNamespaces() to inferxmlschema test.

2004-05-14  Atsushi Enomoto <atsushi@ximian.com>
