@@ -1,3 +1,7 @@
+2004-09-21  Sureshkumar T <tsureshkumar@novell.com>
+	
+	* DataSetTest.cs : Added a test for Deserialization of dataset : DeserializeModifiedDataSet
+	
 2004-06-23 Umadevi S <sumadevi@novell.com>
 	* DataTableTest.cs :Corrected Testcases to .net 1.1 specifications
 
